# zeek-agent

./: .gitignore
components/: CMakeLists.txt
components/zeekwinevent/: CMakeLists.txt
components/zeekwinevent/include/zeek/: iwineventconsumer.h  iwinevtlogconsumer.h
components/zeekwinevent/src/: windows_utils.cpp  windows_utils.h  wineventconsumer.cpp  wineventconsumer.h  winevtlogconsumer.cpp  winevtlogconsumer.h  winevtlogparser.cpp  winevtlogparser.h
components/zeekwinevent/tests/: wineventconsumer.cpp
mitre_ttp_mapping/: Winevtlog_Mapping.xlsx  Zeek-Agent_Evaluation.xlsx
src/: zeekagent.cpp
tables/: CMakeLists.txt
tables/winevent/: CMakeLists.txt
tables/winevent/include/zeek/: wineventservicefactory.h  winevtlogservicefactory.h
tables/winevent/src/: accountlogontableplugin.cpp  accountlogontableplugin.h  communityidgenerator.cpp  communityidgenerator.h  filecreatetableplugin.cpp  filecreatetableplugin.h  filemonitoringtableplugin.cpp  filemonitoringtableplugin.h  networkconntableplugin.cpp  networkconntableplugin.h  objaccessattempttableplugin.cpp  objaccessattempttableplugin.h  processcreationtableplugin.cpp  processcreationtableplugin.h  processeventstableplugin.cpp  processeventstableplugin.h  processterminationtableplugin.cpp  processterminationtableplugin.h  regvalmodifiedtableplugin.cpp  regvalmodifiedtableplugin.h  socketeventstableplugin.cpp  socketeventstableplugin.h  wineventservice.cpp  wineventservice.h  wineventservicefactory.cpp  winevtlogservice.cpp  winevtlogservice.h  winevtlogservicefactory.cpp  winevtlogtableplugin.cpp  winevtlogtableplugin.h
tables/winevent/tests/: processeventstableplugin.cpp
